--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=VT323');
+@import url('https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.min.css');
+
+
+::-webkit-scrollbar {
+  width: 0px;  /* remove scrollbar space */
+  background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 .App {
   width: 100%;
   height: 100%;
