월렛 부분 완료

--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -23,7 +23,7 @@
   color: #6d17d7;
   display: flex;
   justify-content: space-between;
-  font-family: 'nanumsquareround';
+  font-family: 'OCRAExtended';
   width: 13%;
   margin-right: 5%;
 }
