--- a/src/components/DetailPost/TicketPrice.css
+++ b/src/components/DetailPost/TicketPrice.css
@@ -2,7 +2,7 @@
 .detail--concert--price--wrapper {
     display: inline-block;
     margin-top: 3%;
-    width: calc(100% - 30px);
+    width: 100%;
     padding: 15px 15px 15px 15px;
     box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.38);
     background-color: #ffffff;
@@ -26,7 +26,6 @@
     font-family: 'VT323', monospace;
     font-size: 30px;
     color: #3d3d3d;
-    cursor: pointer;
     padding: 10px 10px 10px 10px;
 }
 
@@ -36,18 +35,19 @@
     flex-direction: column;
 }
 
-.detail--concert--price--submit {
-    border: none;
-    border-radius: 11px;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    background-color: #6b10af;
+.detail--concert--transfer {
+    border-top: 2px solid #3d3d3d;
+    display: flex;
     width: 100%;
-    height: 5vh;
+    height: 8vh;
     font-family: 'VT323', monospace;
     font-size: 30px;
-    color: white;
+    color: #3d3d3d;
     margin-top: 5vh;
     cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .solded {
